--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "lint:check": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:check:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "start": "next start",
     "analyze": "ANALYZE=true next build"
   },
@@ -69,6 +72,10 @@
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "15.5.4",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
